--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 body {
     background-color: #333;
     color: #fff;
-text-shadow: 1px 1px 2px #000;
+    text-shadow: 1px 1px 2px #000;
+    width: 80%;
+    margin: 0 auto;
 }
